cmake_minimum_required(VERSION 3.26)
project(LeetCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(LeetCode main.cpp
  Easy/TwoSum.cpp
  Easy/ValidParantheses.cpp
  Easy/BinarySearch.cpp
  Easy/ValidAnagram.cpp
  Easy/AddTwoIntegers.cpp
  Easy/RunningSum.cpp
  Easy/ValidPalindrome.cpp
  Easy/BestTimeToBuyAndSellStock.cpp
  Easy/InvertBinaryTree.cpp
  Easy/MergeTwoSortedLists.cpp
  Easy/BalancedBinaryTree.cpp
  Easy/FloodFill.cpp
  Easy/FloodFill.cpp
  Easy/FizzBuzz.cpp
  Medium/LowestCommonAncestor.cpp
)
