cmake_minimum_required(VERSION 3.26)
project(LeetCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(LeetCode main.cpp
        Easy/TwoSum.cpp
        Easy/ValidParantheses.cpp
        Easy/BinarySearch.cpp
        Easy/ValidAnagram.cpp
        Easy/AddTwoIntegers.cpp
        Easy/RunningSum.cpp
        Easy/ValidPalindrome.cpp
        Easy/BestTimeToBuyAndSellStock.cpp
        Easy/InvertBinaryTree.cpp
        Easy/MergeTwoSortedLists.cpp
        Easy/FloodFill.cpp
        Easy/FloodFill.cpp
        Easy/FizzBuzz.cpp
        Easy/NumberOfStepsToReduceAnumberToZero.cpp
        Medium/LowestCommonAncestor.cpp
        Easy/MiddleOfTheLinkedList.cpp
        Easy/RansomNote.cpp
        Easy/ReverseLinkedList.cpp
        Easy/MaxConsecutiveOnes.cpp
        Easy/FindNumbersWithEvenNumberOfDigits.cpp
        Easy/SquaresOfASortedArray.cpp
        Easy/DuplicateZeros.cpp
        Easy/MergeSortedArray.cpp
        Easy/RemoveElement.cpp
        "Easy/RemoveDuplicatesFromSortedArray.cpp"
        Easy/CheckIfNandItsDoubleExist.cpp
        Easy/ValidMountainArray.cpp
        Easy/ReplaceElementsWithGreatestElementOnRightSide.cpp
        Easy/MoveZeros.cpp
        Easy/SortArrayByParity.cpp
)
